--- a/app/scss/layout/_calendar.scss
+++ b/app/scss/layout/_calendar.scss
@@ -135,7 +135,7 @@
 
         &__title {
             font-size: $font-size-h2 - 6px;
-            line-height: $line-height-h2 -6px;
+            line-height: $line-height-h2 - 6px;
             margin-bottom: 10px;
         }
 
