--- a/app/scss/layout/_promotion.scss
+++ b/app/scss/layout/_promotion.scss
@@ -1,5 +1,5 @@
 .promotions_cards {
-    .slider-promotions__item:not(:first-child) {
+    .promotions__item:not(:first-child) {
         margin-top: 50px;
     }
 }
