--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -7,6 +7,7 @@
 @import "./layout/inedx";
 @import "./layout/calendar";
 @import "./layout/roletta";
+@import "./layout/calculator";
 
 @import "./layout/promotion";
 
